--- a/client/src/templates/design1.scss
+++ b/client/src/templates/design1.scss
@@ -25,8 +25,13 @@ $design1Color: #50e3c2;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      & > div span:first-of-type {
-        min-width: 100px;
+      max-width: 50%;
+      & > div {
+        display: flex;
+        margin: 5px 0;
+        span:first-of-type {
+          min-width: 100px;
+        }
       }
       .title,
       span {
