--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -3,6 +3,7 @@
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Mansalva:400,700');
 @import url('https://fonts.googleapis.com/css?family=Oxygen:400,700');
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 // Set your brand colors
 // $purple: #8a4d76;
@@ -70,11 +71,25 @@ $positions: (
     text-transform: capitalize;
   }
 }
+
+header {
+  .navbar-brand {
+    font-family: 'Oswald', sans-serif;
+  }
+}
 header .navbar-brand{
-  font-family: 'Mansalva';
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
+  .title {
+    font-weight: normal;
+    color: #2e7ec2;
+    span {
+      color: #a70d86;
+    }
+  }
 }
 section > div:nth-of-type(1) {
-  font-family: 'Mansalva';
+  font-family: 'Oswald', sans-serif;
 }
 .contact, .experience .is-grouped {
   box-shadow: 1px 1px 7px -1px;
@@ -87,6 +102,64 @@ section > div:nth-of-type(1) {
   }
   div {
     position: relative;
+  }
+}
+.navbar {
+  box-shadow: 0 8px 6px -11px #9a9a9a;
+}
+.button.is-primary {
+  background: #006df7;
+}
+.button.is-primary:hover {
+  background: #418ecf;
+}
+.login-wrapper {
+  background: linear-gradient(to bottom, #ededed 0%, #ffffff 100%);
+  .box {
+    border:1px solid #ededed;
+    box-shadow: -5px 0 16px -5px #c8c8c8;
+  }
+  .login-desc-box {
+    background: -moz-linear-gradient(45deg, rgba(173,8,132,1) 0%, rgba(46,126,194,1) 100%); /* ff3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(173,8,132,1)), color-stop(100%, rgba(46,126,194,1))); /* safari4+,chrome */
+    background: -webkit-linear-gradient(45deg, rgba(173,8,132,1) 0%, rgba(46,126,194,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(45deg, rgba(173,8,132,1) 0%, rgba(46,126,194,1) 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(45deg, rgba(173,8,132,1) 0%, rgba(46,126,194,1) 100%); /* ie10+ */
+    background: linear-gradient(45deg, rgba(173,8,132,1) 0%, rgba(46,126,194,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e7ec2', endColorstr='#ad0884',GradientType=1 ); /* ie6-9 */   
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    box-shadow: -5px 0 16px -5px #929292;
+    color: #fff;
+    padding :40px 20px;
+    h2 {
+      font-size: 25px;
+      border-bottom: 1px solid #006df7;
+      padding-bottom: 5px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 16px;
+    }
+  }
+}
+.login-container {
+  .title.is-3 {
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    color: #006df7;
+  }
+  form {
+    padding: 30px;
+    .input {
+      padding: 25px 10px;
+      box-shadow: inherit;
+    }
+    .button.is-primary {
+      width: 100%;
+      height: 55px; 
+    }
   }
 }
 @media print {
