--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -92,7 +92,7 @@ header .navbar-brand{
 section > div:nth-of-type(1) {
   font-family: 'Oswald', sans-serif;
 }
-.contact, .experience .is-grouped {
+.contact, .objective, .experience .is-grouped {
   box-shadow: 1px 1px 7px -1px;
 }
 
@@ -163,6 +163,16 @@ section > div:nth-of-type(1) {
     }
   }
 }
+
+.wh-100 {
+  width: 100%;
+  height: 100%;
+}
+
+.is-absolute {
+  position: absolute;
+}
+
 @media print {
   .no-print {
     display: none;
