--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,44 +1,43 @@
 @charset "utf-8";
 
 // Import a Google Font
-@import url("https://fonts.googleapis.com/css?family=Mansalva:400,700");
-@import url("https://fonts.googleapis.com/css?family=Oxygen:400,700");
-@import url("https://fonts.googleapis.com/css?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap");
 
-// Set your brand colors
-// $purple: #8a4d76;
-// $pink: #fa7c91;
-// $brown: #757763;
-// $beige-light: #d0d1cd;
-// $beige-lighter: #eff0eb;
+$blue: #241f5f;
 
-// Update Bulma's global variables
-$family-sans-serif: "Oxygen", sans-serif;
-// $grey-dark: $brown;
-// $grey-light: $beige-light;
-$primary: #8a2ae4;
+$family-sans-serif: "Open Sans", sans-serif;
+$grey: #9e9e9e;
+$primary: #ff6666;
+$dark: #050049;
 // $link: #3d01f6;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
-// Update some of Bulma's component variables
-// $body-background-color: $beige-lighter;
 $control-border-width: 2px;
-// $input-border-color: transparent;
-// $input-shadow: none;
 
 // Import only what you need from Bulma
 @import "bulma/bulma";
 
 $sizes: (0, 10, 15, 20, 25, 30, 50);
 $positions: (("t", "top"), ("r", "right"), ("b", "bottom"), ("l", "left"));
+$header-height: 76px;
+
+body {
+  * {
+    font-family: "Open Sans", sans-serif;
+  }
+  .select select,
+  .textarea,
+  .input {
+    color: $dark;
+    font-weight: 500;
+  }
+}
 .App {
   height: 100vh;
   text-align: center;
   > div.login-wrapper {
-    padding-top: 76px;
-    height: 100%;
-    min-height: 700px;
+    min-height: 100%;
   }
   .message {
     background: none;
@@ -65,6 +64,16 @@ $positions: (("t", "top"), ("r", "right"), ("b", "bottom"), ("l", "left"));
 }
 
 #form-section {
+  padding-bottom: 100px;
+  @include until($tablet) {
+    padding-bottom: 200px;
+  }
+  &.hide {
+    display: none;
+  }
+  @include until($widescreen) {
+    // width: 100%;
+  }
   label {
     text-align: left;
   }
@@ -75,8 +84,9 @@ $positions: (("t", "top"), ("r", "right"), ("b", "bottom"), ("l", "left"));
 }
 
 .App > section {
-  margin-top: 76px;
+  margin-top: $header-height;
   z-index: 0;
+  position: relative;
 }
 
 header {
@@ -84,27 +94,14 @@ header {
   top: 0;
   background: white;
   z-index: 1;
-  .navbar-brand {
-    font-family: "Oswald", sans-serif;
-  }
 }
 header .navbar-brand {
-  font-family: "Oswald", sans-serif;
-  font-weight: normal;
   .title {
-    font-weight: normal;
-    color: $link;
-    span {
-      color: #8a2ae4;
-    }
+    font-weight: 700;
+    color: $primary;
   }
 }
-section > div:nth-of-type(1) {
-  font-family: "Oswald", sans-serif;
-}
-.contact,
-.about,
-.experience .is-grouped {
+.is-grouped {
   box-shadow: 1px 1px 7px -1px;
 }
 
@@ -122,50 +119,47 @@ section > div:nth-of-type(1) {
 }
 .button {
   font-weight: 600;
-  &.is-primary {
-    background-color: rgba(138, 42, 228, 1);
-  }
-  &.is-secondary {
-    background-color: rgba(61, 1, 246, 1);
-  }
+}
+.navbar-end {
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .login-wrapper {
+  @include until($tablet) {
+    flex-direction: column-reverse;
+  }
+  @include until($fullhd) {
+    width: 100%;
+  }
   width: 60%;
   min-width: 20rem;
   margin: 0 auto;
 
-  background: linear-gradient(to bottom, #ededed 0%, #ffffff 100%);
   .box {
     border: 1px solid whitesmoke;
     box-shadow: -5px 0 16px -5px #c8c8c8;
   }
   .login-desc-box {
-    // background-image: linear-gradient(
-    //   to top,
-    //   #1e3c72 0%,
-    //   #1e3c72 1%,
-    //   #2a5298 100%
-    // );
-    background-image: linear-gradient(
-      180deg,
-      rgba(138, 42, 228, 1) 50%,
-      rgba(61, 1, 246, 1) 100%
-    );
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e7ec2', endColorstr='#ad0884',GradientType=1 ); /* ie6-9 */
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    box-shadow: -5px 0 16px -5px #929292;
-    color: #fff;
+    box-shadow: -5px 0 16px -10px #929292;
     padding: 40px 20px;
     h2 {
-      font-size: 25px;
-      border-bottom: 1px solid whitesmoke;
+      font-size: 3rem;
+      line-height: 3.2rem;
       padding-bottom: 5px;
       margin-bottom: 20px;
       font-weight: 700;
+      color: $primary;
+      span {
+        color: $dark;
+      }
     }
     p {
-      font-size: 16px;
+      font-size: 2rem;
+      color: $grey;
     }
   }
 }
@@ -183,7 +177,7 @@ section > div:nth-of-type(1) {
       padding: 25px 10px;
       box-shadow: inherit;
     }
-    .button.is-primary {
+    .button[type="submit"] {
       width: 100%;
       height: 55px;
     }
@@ -197,6 +191,40 @@ section > div:nth-of-type(1) {
 
 .is-absolute {
   position: absolute;
+}
+.action-buttons {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  @include until($desktop) {
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0.5rem 5rem;
+    background: $white;
+    box-shadow: 1px 1px 7px -1px;
+  }
+  button:not(:last-of-type) {
+    margin-bottom: 0.5rem;
+  }
+}
+.overlay {
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#preview-section {
+  background-color: $white;
+  position: absolute;
+  transform: translateX(-50%) translateY(-110%);
+  top: 0;
+  left: 50%;
+  transition: all 0.3s ease-in-out;
+  &.show {
+    transform: translateX(-50%) translateY(0);
+  }
 }
 
 @media print {
